\name{fastreeRNews}
\title{fastreeR News}
\encoding{UTF-8}

\section{Version 1.7.2 (2024-02-10)}{\itemize{
\item Fix vignette bug.
}}

\section{Version 1.7.1 (2024-02-10)}{\itemize{
\item Update R version requirement.
}}

\section{Version 1.7.0 (2023-10-29)}{\itemize{
\item Bump x.y.z version to odd y following creation of RELEASE_3_18 branch.
}}

\section{Version 1.6.0 (2023-10-29)}{\itemize{
\item Bump x.y.z version to even y prior to creation of RELEASE_3_18 branch.
}}

\section{Version 1.5.2 (2023-08-24)}{\itemize{
\item Update java backend to BioInfoJavaUtils-1.4.0 (haploid GT in vcf).
}}

\section{Version 1.5.1 (2023-04-30)}{\itemize{
\item Update java backend to BioInfoJavaUtils-1.3.1 (fasta header name).
}}

\section{Version 1.5.0 (2023-04-27)}{\itemize{
\item Bump x.y.z version to odd y following creation of RELEASE_3_17 branch.
}}

\section{Version 1.4.0 (2023-04-21)}{\itemize{
\item Bump x.y.z version to even y prior to creation of RELEASE_3_17 branch.
}}

\section{Version 1.3.0 (2022-11-01)}{\itemize{
\item Bump x.y.z version to odd y following creation of RELEASE_3_16 branch.
}}

\section{Version 1.2.0 (2022-11-01)}{\itemize{
\item Bump x.y.z version to even y prior to creation of RELEASE_3_16 branch.
}}

\section{Version 1.1.6 (2022-09-26)}{\itemize{
\item Update java backend to BioInfoJavaUtils-1.2.4 (revamped FastaManager).
}}

\section{Version 1.1.5 (2022-06-23)}{\itemize{
\item Update vignette minor bug.
}}

\section{Version 1.1.4 (2022-06-16)}{\itemize{
\item Update vignette to handle getting sample files through https failure.
}}

\section{Version 1.1.3 (2022-06-06)}{\itemize{
\item Update vignette to handle getting sample files through https failure.
}}

\section{Version 1.1.2 (2022-05-15)}{\itemize{
\item Update possibly corrupted samples.vcf.gz.
}}

\section{Version 1.1.1 (2022-05-08)}{\itemize{
\item Update tests to improve coverage.
}}

\section{Version 1.1.0 (2022-05-08)}{\itemize{