@@ -5,7 +5,7 @@
 #'
 #' @param treeStr A \code{\link[base]{character} vector} of a
 #'   phylogenetic tree in Newick format
-#' @param treeDistances code{numeric \link[base]{matrix}} of
+#' @param treeDistances \code{numeric \link[base]{matrix}} of
 #'   distances, that were used to generate the tree.
 #'   If NULL, it will be inferred from tree branch lengths.
 #' @param treeLabels A \code{\link[base]{character} vector}
